testdata/typechecker/error/portfolio_MissingMain.java
// Tests that files with no main function error.

class MissingMainClass {

}
